--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td>  <img src="images/Krists.jpeg" alt="Piture" width="300" height="300" /></td>
+      <td>  <img src="images/Krists.jpeg" alt="Picture" width="300" height="300" /></td>
       <td><h1>Krists Paulins</h1>
       <p><em>Junior web developer.</em></p>
       <p>A former barista who has always had a passion for all things tech, but never really had the time to pursue that professionally. Now with all the free time staying at home and sheltering in place I have finally taken up on coding classes and
