--- a/ContactMe.html
+++ b/ContactMe.html
@@ -5,7 +5,7 @@
     <title>Contact details</title>
   </head>
   <body>
-    <img src="images/krists.jpeg" alt="Piture of Krists" width="300" height="300" />
+    <img src="images/Krists.jpeg" alt="Picture of Krists" width="300" height="300" />
     <h1>Krists Paulins</h1>
     <p><em>Junior web developer.</em></p>
     <h4>Contact details</h4>
